--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ css:
 js:
 bgcolor: ff5a71
 keywords: fullpage, html, css, landing page, jekyll, ruby, web marketing, advertising, about me, Antonio Trento
-canonical: https://fullit.github.io
+canonical: https://openworldgame-io.github.io
 ---
 {% include JB/setup %}
 <div id="intro">
