--- a/archive.html
+++ b/archive.html
@@ -3,7 +3,7 @@ layout: blog
 title: Archive
 group: navigation
 tagline: Every post blog in a list
-tags : [blog, fullit, posts, post]
+tags : [blog, posts, post]
 img : 3.jpg
 img-mobile : 3-mobile.jpg
 author : Antonio Trento
@@ -16,7 +16,7 @@ css:
 js:
 bgcolor: ff5a71
 keywords: fullpage, archive, posts, blog, jekyll, ruby, web marketing, advertising, Antonio Trento
-canonical: https://fullit.github.io/blog
+canonical: https://OpenWorldGame-Io.github.io/blog
 ---
 {% include JB/setup %}
 
