--- a/blog.html
+++ b/blog.html
@@ -2,8 +2,7 @@
 layout: blog
 title: Fullit Blog
 group: navigation
-tagline: What is the fullit blog and what can do for your business
-tags : [blog, fullit, posts, post]
+tags : [blog, posts, post]
 img : 3.jpg
 img-mobile : 3-mobile.jpg
 author : Antonio Trento
@@ -16,7 +15,7 @@ css:
 js:
 bgcolor: ff5a71
 keywords: fullpage, html, css, landing page, jekyll, ruby, web marketing, advertising, Antonio Trento
-canonical: https://fullit.github.io/blog
+canonical: https://openworldgame-io.github.io/blog
 ---
 {% include JB/setup %}
 
