--- a/categories.html
+++ b/categories.html
@@ -3,7 +3,7 @@ layout: blog
 title: Categories
 group: navigation
 tagline: All posts order by capegories 
-tags : [blog, fullit, posts, post]
+tags : [blog, posts, post]
 img : 3.jpg
 img-mobile : 3-mobile.jpg
 author : Antonio Trento
