--- a/pages.html
+++ b/pages.html
@@ -3,7 +3,7 @@ layout: blog
 title: Pages
 group: navigation
 tagline: All pages order by capegories 
-tags : [blog, fullit, posts, post]
+tags : [blog, posts, post]
 img : 3.jpg
 img-mobile : 3-mobile.jpg
 author : Antonio Trento
@@ -11,7 +11,7 @@ css:
 js:
 bgcolor: ff5a71
 keywords: fullpage, html, css, landing page, jekyll, ruby, web marketing, advertising, Antonio Trento
-canonical: https://fullit.github.io/blog
+canonical: https://openworldgame-io.github.io/blog
 ---
 {% include JB/setup %}
 
