--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@ layout: blog
 title: Tags
 group: navigation
 tagline: All tags used in the posts
-tags : [blog, fullit, posts, post]
+tags : [blog, posts, post]
 img : 3.jpg
 img-mobile : 3-mobile.jpg
 css: 
