--- a/blog.html
+++ b/blog.html
@@ -1,20 +1,17 @@
----
-layout: blog
-title: Fullit Blog
+--- layout: blog title: Fullit Blog
 group: navigation
 tags : [blog, posts, post]
 img : 3.jpg
 img-mobile : 3-mobile.jpg
-author : Antonio Trento
+author : Open World
 img2 : 2.jpg
 img3 : 3.jpg
-author : Antonio Trento
 title2 : Amazing possibility whit <a href="..">full slides</a>
 title3 : Try it
 css: 
 js:
 bgcolor: ff5a71
-keywords: fullpage, html, css, landing page, jekyll, ruby, web marketing, advertising, Antonio Trento
+keywords: fullpage, html, css, jekyll, ruby, web marketing, advertising
 canonical: https://openworldgame-io.github.io/blog
 ---
 {% include JB/setup %}
