--- a/categories.html
+++ b/categories.html
@@ -6,7 +6,7 @@ tagline: All posts order by capegories
 tags : [blog, posts, post]
 img : 3.jpg
 img-mobile : 3-mobile.jpg
-author : Antonio Trento
+author : Open World
 css: 
 js:
 bgcolor: ff5a71
