--- a/pages.html
+++ b/pages.html
@@ -6,11 +6,11 @@ tagline: All pages order by capegories
 tags : [blog, posts, post]
 img : 3.jpg
 img-mobile : 3-mobile.jpg
-author : Antonio Trento
+author : Open World
 css: 
 js:
 bgcolor: ff5a71
-keywords: fullpage, html, css, landing page, jekyll, ruby, web marketing, advertising, Antonio Trento
+keywords: fullpage, html, css, landing page, jekyll, ruby
 canonical: https://openworldgame-io.github.io/blog
 ---
 {% include JB/setup %}
