--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ canonical: https://github.com/OpenWorldGame-Io/OpenWorldGame-Io.github.io
 				- VR<br>
 				- Mobile<br>
 		</h3>
+		{% include ads-block.html %}
 		<br />
 		<div class="intro-scroll-down">
 			<a data-menuanchor="0section" href="#0section">
