--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ canonical: https://github.com/OpenWorldGame-Io/OpenWorldGame-Io.github.io
 
 
 	</div>
-	<div data-anchor="0section" class="section" id="section1">
+	<div data-anchor="=1section" class="section" id="section1">
 		<h1 class="heavy">Where</span>
 		</h1><br />
 		<br /><h2 class="large-blur">
