--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ canonical: https://github.com/OpenWorldGame-Io/OpenWorldGame-Io.github.io
 					Unreal engine 5 + Lyra Starter Game + Open Source Community driven and reviewed Plugins.<br><br>
 					UE5 gives a complete High End “Next Gen” game engine, with all Source Code that is publicly available.<br><br>
 					UE5’s Lyra Starter Game give a starting point for basic builds, characters, network play, etc.<br>
-					<img src="assets/img/menu.jpg" alt="Menu">
+					<img src="assets/img/menu.png" alt="Menu">
 				</span></span>
 			</h3>
 				<div class="intro-scroll-down">
