--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ canonical: https://github.com/OpenWorldGame-Io/OpenWorldGame-Io.github.io
 					Currently, Open World is built using:<br>
 					Unreal engine 5 + Lyra Starter Game + Open Source Community driven and reviewed Plugins.<br>
 					UE5 gives a complete High End “Next Gen” game engine, with all Source Code that is publicly available.
-					UE5’s Lyra Starter Game give a starting point for basic builds, characters, network play, etc.<br>
+					UE5’s Lyra Starter Game gives a starting point for basic builds, characters, network play, etc.<br>
 					<img src="assets/img/menu.png" alt="Menu">
 				</span></span>
 			</h3>
