update bg images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: index
 title: OpenWorldGame
 tagline: A Next Gen Open Source, Open World, Community Driven "Metaverse"
-img : 1.png
+img : 1.jpg
 img-mobile : 1-mobile.jpg
 css: index.css
 js: test.js
