--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ canonical: https://github.com/OpenWorldGame-Io/OpenWorldGame-Io.github.io
 				Have a ChatGPT Plus login?  Check out our new GPTs<br>
 				<a href="https://chat.openai.com/g/g-qpkvbGQm5-dungeon-master" target="_blank">https://chat.openai.com/g/g-qpkvbGQm5-dungeon-master<br><br>
 				<a href="https://chat.openai.com/g/g-JUGbhMLSa-role-play-party" target="_blank">https://chat.openai.com/g/g-JUGbhMLSa-role-play-party<br><br>
+				<img src="assets/img/menu.png" alt="Menu">
 			</span></span>
 			<br/>
 		</h2>
