--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ canonical: https://github.com/OpenWorldGame-Io/OpenWorldGame-Io.github.io
 				<a href="https://chat.openai.com/g/g-JUGbhMLSa-role-play-party" target="_blank">Role Play Party</a>
 				<br><br>
 				<img src="assets/img/Dungeon_Master.png" alt="Menu" width="400" height="300"> 
+				<img src="assets/img/Role_Play_Party.png" alt="Menu" width="400" height="300"><br>
 				<img src="assets/img/Dungeon_Master_2.png" alt="Menu" width="400" height="300">
-				<img src="assets/img/Role_Play_Party.png" alt="Menu" width="400" height="300">
 				<img src="assets/img/Role_Play_Party_2.png" alt="Menu" width="400" height="300">
 			</h3>
 			</span></span>
